syntax = "proto3";
option go_package = "./pb";

message GetHotelsListRequest {
  string search_query = 1;
  int32 limit = 2;
  int32 offset = 3;
}

message GetHotelsListResponse {
  int64 total_records = 1;
  repeated HotelData hotels_list = 2;
}

message HotelData {
  string id = 1;
  string name = 2;
  string description = 3;
  repeated string images = 4;
  float cost_per_night = 5;
}

message GetHotelByIdRequest {
  int64 hotel_id = 1;
}

message GetHotelByIdResponse {
  int64 id = 1;
  string name = 2;
  string description = 3;
  repeated string images = 4;
  int64 cost_per_night = 5;
  int64 available_rooms = 6;
  string address = 7;
}

message AddHotelRequest {
  string name = 1;
  string description = 2;
  repeated string images = 3;
  int64 cost_per_night = 4;
  int64 total_rooms = 5;
  string street = 6;
  string landmark = 7;
  string locality = 8;
  string city = 9;
  string state = 10;
  string pincode = 11;
}

// The request to book rooms in a hotel
message BookHotelRequest {
  int64 hotel_id = 1;
  int32 num_rooms = 2;
  int32 num_days = 3;
  string check_in_date = 4; // Format: YYYY-MM-DD
}

// The response after booking attempt
message BookHotelResponse {
  string payment_order_id = 1;
  bool success=2;
  string message = 3;
  BookingDetails booking_details = 4;
  message BookingDetails {
    int64 booking_id = 1;
    int64 hotel_id = 2;
    int32 num_rooms = 3;
    int32 num_days = 4;
    string check_in_date = 5; // Format: YYYY-MM-DD
    float total_cost = 6;
  }
  string checkout_url=7;
}

message GenericSuccessResponse {
  string status = 1;
  string message = 2;
}

message PaymentWebhookRequest {
  string entity=1;
  string event=2;
  Payload payload=3;

  message Payload {
    PaymentDetails payment=1;
  }

  message PaymentDetails {
    string id=1;
    string order_id=2;
    int32 amount=3;
    string currency=4;
    int64 createdAt=5;
    string status=6;
    map<string, string> metadata=7;
    string entity=8;
    string method=9;
  }
}

message PaymentStatusRequest {
  string order_id = 1;
}



message PaymentStatusResponse {
  string order_id = 1;
  string status = 2; // e.g., "paid", "failed", "pending"
  string message = 3; // Additional information about the payment status
}

message GetBookingDetailsRequest {
  int64 booking_id = 1;
}

message GetBookingDetailsResponse {
  int64 booking_id = 1;
  int32 num_rooms = 4;
  int32 num_days = 5;
  string check_in_date = 6;
  string check_out_date = 7;
  float total_cost = 8;
  string status = 9;
  string payment_status = 10;
  string booking_time = 11;
}