syntax = "proto3";
option go_package = "./pb";

message LoginRequest {
  string username = 1;
  string password = 2;
}

message RegisterRequest {
  string username = 1;
  string password = 2;
}

message LoginOrRegisterResponse {
  string token = 1;
  string message = 2;
  UserInfo user = 3;
}

message UserInfo {
  int64 user_id = 1;
  string name = 2;
  string email = 3;
}